--- a/workspace/Helium/res/values/strings.xml
+++ b/workspace/Helium/res/values/strings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
     <string name="app_name">Helium</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="service_name">SyncService</string>
 
 </resources>
